# autoresearch-perturbation

./: .gitignore  BENCHMARK.md  LICENSE  NEXT_PROBLEMS.md  OOD_RESULTS.md  POST.md  PROCESS.md  PROCESS_PB.md  README.md  SOCIAL_PROOF.md  SUBSTACK.md  ablation_training.py  claude-code-kickoff.md  eval_baselines.py  eval_la.py  eval_multiseed_pb.py  eval_ood_la.py  eval_pb_arch.py  harness.py  harness_perturbench.py  harness_perturbench_ood.py  load_real_data.py  pipeline.py  pipeline_cim.py  pipeline_la_ablation.py  pipeline_la_pb_arch.py  precompute_geneformer_emb.py  precompute_scgpt_emb.py  prepare_data.py  program.md  pyproject.toml
.github/workflows/: smoketest.yml
scripts/: README.md  condition_b_training_patch.md  condition_b_wrapper.py  run_on_gpu.sh
